@@ -1,6 +1,8 @@
 package org.whispersystems.contactdiscovery.resources;
 
 import io.dropwizard.testing.junit.ResourceTestRule;
+
+import org.apache.commons.lang3.tuple.Pair;
 import org.glassfish.jersey.test.grizzly.GrizzlyWebTestContainerFactory;
 import org.junit.Before;
 import org.junit.Rule;
@@ -17,9 +19,13 @@ import org.whispersystems.dropwizard.simpleauth.AuthValueFactoryProvider;
 import javax.ws.rs.client.Entity;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
-import java.util.Arrays;
+
+import com.google.common.collect.Streams;
+
 import java.util.List;
 import java.util.Optional;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 import static org.junit.Assert.assertEquals;
 import static org.mockito.Mockito.*;
@@ -27,6 +33,8 @@ import static org.mockito.Mockito.*;
 public class DirectoryManagementResourceTest {
 
   private final DirectoryManager directoryManager = mock(DirectoryManager.class);
+
+  private final UUID validUuid = UUID.fromString("1447ea61-f636-42b2-b6d2-97aa73760a60");
 
   @Rule
   public final ResourceTestRule resources = ResourceTestRule.builder()
@@ -45,9 +53,13 @@ public class DirectoryManagementResourceTest {
 
   @Test
   public void testDirectoryReconcileAll() throws Exception {
-    List<String> addresses = Arrays.asList("+14151111111");
+    List<UUID>   uuids     = List.of(validUuid);
+    List<String> addresses = List.of("+14151111111");
 
-    DirectoryReconciliationRequest  reconciliationRequest  = new DirectoryReconciliationRequest(null, null, addresses);
+    List<Pair<UUID, String>> users = Streams.zip(uuids.stream(), addresses.stream(), Pair::of)
+                                            .collect(Collectors.toList());
+
+    DirectoryReconciliationRequest  reconciliationRequest  = new DirectoryReconciliationRequest(null, null, uuids, addresses);
     DirectoryReconciliationResponse reconciliationResponse = resources.getJerseyTest()
                                                                       .target("/v1/directory/reconcile")
                                                                       .request(MediaType.APPLICATION_JSON_TYPE)
@@ -55,15 +67,19 @@ public class DirectoryManagementResourceTest {
                                                                       .put(Entity.json(reconciliationRequest), DirectoryReconciliationResponse.class);
 
     assertEquals(DirectoryReconciliationResponse.Status.OK, reconciliationResponse.getStatus());
-    verify(directoryManager, times(1)).reconcile(eq(Optional.empty()), eq(Optional.empty()), eq(addresses));
+    verify(directoryManager, times(1)).reconcile(eq(Optional.empty()), eq(Optional.empty()), eq(users));
   }
 
   @Test
-  public void testDirectoryReconcilePart() throws Exception {
-    List<String> addresses = Arrays.asList("+14151111111");
+        public void testDirectoryReconcilePart() throws Exception {
+    List<UUID>   uuids     = List.of(validUuid);
+    List<String> addresses = List.of("+14151111111");
 
-    DirectoryReconciliationRequest  requestOne  = new DirectoryReconciliationRequest(null, "+14151111111", addresses);
-    DirectoryReconciliationRequest  requestTwo  = new DirectoryReconciliationRequest("+14151111111", null, null);
+    List<Pair<UUID, String>> users = Streams.zip(uuids.stream(), addresses.stream(), Pair::of)
+                                            .collect(Collectors.toList());
+
+    DirectoryReconciliationRequest  requestOne  = new DirectoryReconciliationRequest(null, validUuid, uuids, addresses);
+    DirectoryReconciliationRequest  requestTwo  = new DirectoryReconciliationRequest(validUuid, null, null, null);
     DirectoryReconciliationResponse responseOne = resources.getJerseyTest()
                                                            .target("/v1/directory/reconcile")
                                                            .request(MediaType.APPLICATION_JSON_TYPE)
@@ -79,15 +95,15 @@ public class DirectoryManagementResourceTest {
     assertEquals(DirectoryReconciliationResponse.Status.OK, responseOne.getStatus());
     assertEquals(DirectoryReconciliationResponse.Status.OK, responseTwo.getStatus());
 
-    verify(directoryManager, times(1)).reconcile(eq(Optional.empty()), eq(Optional.of("+14151111111")), eq(addresses));
-    verify(directoryManager, times(1)).reconcile(eq(Optional.of("+14151111111")), eq(Optional.empty()), isNull());
+    verify(directoryManager, times(1)).reconcile(eq(Optional.empty()), eq(Optional.of(validUuid)), eq(users));
+    verify(directoryManager, times(1)).reconcile(eq(Optional.of(validUuid)), eq(Optional.empty()), eq(List.of()));
   }
 
   @Test
   public void testDirectoryReconcileMissing() throws Exception {
     when(directoryManager.reconcile(any(), any(), any())).thenReturn(false);
 
-    DirectoryReconciliationRequest  request  = new DirectoryReconciliationRequest(null, null, Arrays.asList());
+    DirectoryReconciliationRequest  request  = new DirectoryReconciliationRequest(null, null, List.of(), List.of());
     DirectoryReconciliationResponse response = resources.getJerseyTest()
                                                         .target("/v1/directory/reconcile")
                                                         .request(MediaType.APPLICATION_JSON_TYPE)
